rank pure and c++ fixes